--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body{
 }
 
 #profile-pic{
-  height: 100px;
+  height: 150px;
   margin-top: 10%;
 }
 
@@ -35,6 +35,10 @@ main > section{
   }
 
 section > h1{
+  text-align: left;
+}
+
+section > ul{
   text-align: left;
 }
 
